CMAKE_MINIMUM_REQUIRED(VERSION 3.16)

OPTION (VKH_BUILD_SHARED_LIB "Build using shared libraries" OFF)
OPTION(VKH_ENABLE_VMA "enable Vulkan Memory Allocator" ON)

#if (VKH_ENABLE_VMA)
#	SET(LANG "CXX")
#ELSE()
	SET(LANG "C")
#ENDIF()
SET(CMAKE_${LANG}_STANDARD 11)

PROJECT(vkh VERSION 0.1.0 DESCRIPTION "Vulkan helpers library" LANGUAGES ${LANG})

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")

IF(NOT CMAKE_BUILD_TYPE)
  SET(CMAKE_BUILD_TYPE Release)
ENDIF()

MESSAGE(STATUS "${CMAKE_BUILD_TYPE} build.")

IF (CYGWIN)
  SET (CMAKE_FIND_LIBRARY_PREFIXES "")
  SET (CMAKE_FIND_LIBRARY_SUFFIXES ".lib" ".LIB" ".dll" ".DLL")
ENDIF()

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
	ADD_DEFINITIONS (-DDEBUG)
	OPTION(ENABLE_VALIDATION "enable vulkan validation layer" ON)
	IF (UNIX)
		SET(CMAKE_${LANG}_FLAGS "-Wall -Wno-extra -Wno-unknown-pragmas")
	ELSEIF (MSVC)
		SET(CMAKE_${LANG}_FLAGS "/W4 /wd4204 /wd4221 /wd4100")
	ENDIF()
ELSE()
	UNSET(ENABLE_VALIDATION CACHE)
	IF (UNIX)
		SET(CMAKE_${LANG}_FLAGS "-w")
	ELSEIF(MSVC)
		SET(CMAKE_${LANG}_FLAGS "/W0")
	ENDIF()
ENDIF()

if (${LANG} EQUAL "C" AND MSVC)
	SET(CMAKE_C_FLAGS "/TC ${CMAKE_C_FLAGS}")
endif ()

IF (VKH_ENABLE_VMA)
	ADD_DEFINITIONS (-DUSE_VMA)
ENDIF ()

IF (ENABLE_VALIDATION)
	ADD_DEFINITIONS (-DVKH_USE_VALIDATION)
ENDIF ()

FIND_PACKAGE(Vulkan REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

INCLUDE(GNUInstallDirs)

FILE(GLOB VKH_SRC src/*.c src/deps/*.c)

CONFIGURE_FILE(vkh.pc.in vkh.pc @ONLY)
INSTALL(FILES ${CMAKE_CURRENT_BINARY_DIR}/vkh.pc DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig)

FUNCTION (setup_lib LibName)
	SET_TARGET_PROPERTIES("${LibName}" PROPERTIES
			OUTPUT_NAME ${PROJECT_NAME}
			VERSION ${PROJECT_VERSION}
			SOVERSION 1
			C_STANDARD 11
			C_EXTENSIONS OFF
			PUBLIC_HEADER include/vkh.h
	)
	TARGET_INCLUDE_DIRECTORIES("${LibName}"
		PRIVATE
			${CMAKE_CURRENT_SOURCE_DIR}/src
		PUBLIC
			${CMAKE_CURRENT_SOURCE_DIR}/include
			${Vulkan_INCLUDE_DIRS}
	)
	TARGET_LINK_LIBRARIES("${LibName}"
		PUBLIC
			${Vulkan_LIBRARIES}
			Threads::Threads
	)
	INSTALL(TARGETS "${LibName}"
		LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
		RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
		ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
		PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
ENDFUNCTION(setup_lib)

GET_DIRECTORY_PROPERTY (vkh_has_root_project PARENT_DIRECTORY)

if (VKH_ENABLE_VMA)
	ADD_LIBRARY(libVMA OBJECT src/VmaUsage.cpp)
	SET_PROPERTY(TARGET libVMA PROPERTY POSITION_INDEPENDENT_CODE ON)
        TARGET_INCLUDE_DIRECTORIES(libVMA
                PUBLIC
                        ${CMAKE_CURRENT_SOURCE_DIR}/include
                        ${Vulkan_INCLUDE_DIRS}
        )
ENDIF()

ADD_LIBRARY(vkh_obj OBJECT ${VKH_SRC})
SET_PROPERTY(TARGET vkh_obj PROPERTY POSITION_INDEPENDENT_CODE ON)
TARGET_INCLUDE_DIRECTORIES(vkh_obj
        PRIVATE
                ${CMAKE_CURRENT_SOURCE_DIR}/src
        PUBLIC
                ${CMAKE_CURRENT_SOURCE_DIR}/include
                ${Vulkan_INCLUDE_DIRS}
)

IF (vkh_has_root_project)
	IF (VKH_BUILD_SHARED_LIBS)
		ADD_LIBRARY("${PROJECT_NAME}" SHARED $<TARGET_OBJECTS:vkh_obj> $<TARGET_OBJECTS:libVMA>)
		TARGET_COMPILE_DEFINITIONS("${PROJECT_NAME}" PUBLIC -DVKH_SHARED_BUILD)
		setup_lib ("${PROJECT_NAME}")
	ELSE()
		ADD_LIBRARY("${PROJECT_NAME}" STATIC $<TARGET_OBJECTS:vkh_obj> $<TARGET_OBJECTS:libVMA>)
		setup_lib ("${PROJECT_NAME}")
	ENDIF()
ELSE()
	ADD_LIBRARY("${PROJECT_NAME}_shared" SHARED $<TARGET_OBJECTS:vkh_obj> $<TARGET_OBJECTS:libVMA>)
	SET_PROPERTY(TARGET "${PROJECT_NAME}_shared" PROPERTY POSITION_INDEPENDENT_CODE ON)
	TARGET_COMPILE_DEFINITIONS("${PROJECT_NAME}_shared" PUBLIC -DVKH_SHARED_BUILD)
	setup_lib ("${PROJECT_NAME}_shared")

	ADD_LIBRARY("${PROJECT_NAME}_static" STATIC $<TARGET_OBJECTS:vkh_obj> $<TARGET_OBJECTS:libVMA>)
	target_compile_definitions("${PROJECT_NAME}_static" PUBLIC -DVKH_STATIC_BUILD)
	SET_PROPERTY(TARGET "${PROJECT_NAME}_static" PROPERTY POSITION_INDEPENDENT_CODE OFF)
	setup_lib ("${PROJECT_NAME}_static")
ENDIF()

