option('VKH_BUILD_SHARED_LIB', type : 'boolean', value : false, description : 'Build using shared libraries')
option('VKH_ENABLE_VMA', type : 'boolean', value : true, description : 'enable Vulkan Memory Allocator')
option('ENABLE_VALIDATION', type : 'boolean', value : true, description : 'enable vulkan validation layer')